--- a/ChampionMains.Pyrobot/Views/Profile/index.cshtml
+++ b/ChampionMains.Pyrobot/Views/Profile/index.cshtml
@@ -5,7 +5,8 @@
 }
 
 @section head {
-    <link rel="stylesheet" href="~/Content/css/profile.scss">
+    <link rel="stylesheet" href="~/Content/css/profile.scss" />
+    <link rel="stylesheet" href="/profile/api/flaircss" />
     <script>window.app = angular.module('Profile', []);</script>
 
     <!-- datadragon jsonp -->
