caching flaircss, updating styles

--- a/ChampionMains.Pyrobot/Views/Profile/_summoners.cshtml
+++ b/ChampionMains.Pyrobot/Views/Profile/_summoners.cshtml
@@ -113,6 +113,7 @@
                          flair-mastery="api.champions[subreddit.championId].level" flair-prestige="api.champions[subreddit.championId].prestige"
                          flair-mastery-points="api.champions[subreddit.championId].points">
                     </div>
+                    <small style="opacity: 0.5;"><br />Note: flair image may not match. Ability to edit flair image coming soon.</small>
                     <hr/>
                     <div class="flair-toggles input-group input-group-sm">
                         <span class="input-group-btn">
