--- a/ChampionMains.Pyrobot/content/css/site.scss
+++ b/ChampionMains.Pyrobot/content/css/site.scss
@@ -25,11 +25,11 @@ label.control-label {
 }
 
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700);
-/*@media (min-width: 992px) {
+@media (min-width: 992px) {
     body > .container {
         width: 780px;
     }
-}*/
+}
 
 h1, h2, h3, h4, h5 {
     margin: 0;
