--- a/ChampionMains.Pyrobot/Views/_master.cshtml
+++ b/ChampionMains.Pyrobot/Views/_master.cshtml
@@ -62,10 +62,10 @@
         <div class="container">
             <div class="row">
                 <header>
-                    <div class="col-md-6">
+                    <div class="col-sm-6">
                         <h1>/r/ChampionMains Flairs</h1>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-sm-6">
                         <nav>
                             <ul>
                                 @if (User.Identity.IsAuthenticated)
