update css flair left-align

--- a/ChampionMains.Pyrobot/content/css/profile.scss
+++ b/ChampionMains.Pyrobot/content/css/profile.scss
@@ -101,6 +101,7 @@ table.table {
     font-size: 12px;
     display: inline-block;
     box-sizing: content-box;
+    text-align: left;
 }
 
 /* Spritesheets */
