--- a/ChampionMains.Pyrobot/content/css/profile.scss
+++ b/ChampionMains.Pyrobot/content/css/profile.scss
@@ -109,7 +109,7 @@ table.table {
 $prestiges: 0 250 500 750 1000 2000 3000 4000 5000;
 @each $prestige in $prestiges {
   .prestige.prestige-#{$prestige}::after {
-    content: '' + if($prestige == 1000, '1M', $prestige);
+    content: '' + if($prestige >= 1000, '1M', $prestige);
   }
 }
 
